--- a/Final/Engine/BANTUL100/BANTUL100.html
+++ b/Final/Engine/BANTUL100/BANTUL100.html
@@ -18,7 +18,7 @@
         <div class="sidebar" id='sidebar'>
             <h1>Ramspeed Clearance</h1>
 
-            <a href="/HTML/Final/Home/main.html">HOME</a>
+            <a href="/Final/Home/main.html">HOME</a>
             <a href="../BANTUL100/BANTUL100.html">BANTUL100</a>
             <a href="../BANTUL100/BANTUL100.html">BANTUL110</a>
             <a href="../BANTUL125/BANTUL125.html">BANTUL125</a>
