--- a/Final/Engine/BANTUL110/BANTUL110.html
+++ b/Final/Engine/BANTUL110/BANTUL110.html
@@ -17,16 +17,17 @@
         <div class="sidebar" id='sidebar'>
             <h1>Ramspeed Clearance</h1>
 
-            <a href="../Engine/BANTUL100/BANTUL100.html">BANTUL100</a>
-            <a href="../Engine/BANTUL110/BANTUL110.html">BANTUL110</a>
-            <a href="../Engine/BANTUL125/">BANTUL125</a>
-            <a href="../Engine/BOLT110/BOLT110.html">BOLT110</a>
-            <a href="../Engine/BOLT125/BOLT125.html">BOLT125</a>
-            <a href="../Engine/FLAIR125/FLAIR125.html">FLAIR125</a>
-            <a href="../Engine/GOBLIN150/GOBLIN150.html">GOBLIN150</a>
-            <a href="../Engine/TC125/TC125.html">TC125</a>
-            <a href="../Engine/TC150/TC150.html">TC150</a>
-            
+            <a href="/Final/Home/main.html">HOME</a>
+            <a href="../BANTUL100/BANTUL100.html">BANTUL100</a>
+            <a href="../BANTUL100/BANTUL100.html">BANTUL110</a>
+            <a href="../BANTUL125/BANTUL125.html">BANTUL125</a>
+            <a href="../BOLT110/BOLT110.html">BOLT110</a>
+            <a href="../BOLT125/BOLT125.html">BOLT125</a>
+            <a href="../FLAIR125/FLAIR125.html">FLAIR125</a>
+            <a href="../GOBLIN150/GOBLIN150.html">GOBLIN150</a>
+            <a href="../TC125/TC125.html">TC125</a>
+            <a href="../TC150/TC150.html">TC150</a>
+
          </div>
          
 
