--- a/Final/Engine/BOLT110/BOLT110.html
+++ b/Final/Engine/BOLT110/BOLT110.html
@@ -13,10 +13,10 @@
         <div class="container">
             <div class="text"></div>
         </div>
-
         <div class="sidebar" id='sidebar'>
             <h1>Ramspeed Clearance</h1>
-            
+
+            <a href="/Final/Home/main.html">HOME</a>
             <a href="../BANTUL100/BANTUL100.html">BANTUL100</a>
             <a href="../BANTUL100/BANTUL100.html">BANTUL110</a>
             <a href="../BANTUL125/BANTUL125.html">BANTUL125</a>
