--- a/Final/Home/main.html
+++ b/Final/Home/main.html
@@ -18,7 +18,7 @@
         <div class="sidebar" id='sidebar'>
             <h1>Ramspeed Clearance</h1>
 
-            <a href="/HTML/Final/Home/main.html">HOME</a>
+            <a href="/Final/Home/main.html">HOME</a>
             <a href="../Engine/BANTUL100/BANTUL100.html">BANTUL100</a>
             <a href="../Engine/BANTUL110/BANTUL110.html">BANTUL110</a>
             <a href="../Engine/BANTUL125/">BANTUL125</a>
@@ -38,4 +38,4 @@
          </button>
           <script src="script.js"></script>
     </body>
-  </html>
+</html>
