--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>Ramspeed Clearance</h1>
 
             <a href="../Home/main.html">HOME</a>
-            <a href="../Engine/BANTUL100/BANTUL100.html">BANTUL100</a>
+            <a href="/Engine/BANTUL100.html">BANTUL100</a>
             <a href="../Engine/BANTUL110/BANTUL110.html">BANTUL110</a>
             <a href="../Engine/BANTUL125/">BANTUL125</a>
             <a href="../Engine/BOLT110/BOLT110.html">BOLT110</a>
