--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <div class="sidebar" id='sidebar'>
             <h1>Ramspeed Clearance</h1>
 
-            <a href="../Home/main.html">HOME</a>
-            <a href="/Engine/BANTUL100.html">BANTUL100</a>
-            <a href="../Engine/BANTUL110/BANTUL110.html">BANTUL110</a>
-            <a href="../Engine/BANTUL125/">BANTUL125</a>
-            <a href="../Engine/BOLT110/BOLT110.html">BOLT110</a>
-            <a href="../Engine/BOLT125/BOLT125.html">BOLT125</a>
-            <a href="../Engine/FLAIR125/FLAIR125.html">FLAIR125</a>
-            <a href="../Engine/GOBLIN150/GOBLIN150.html">GOBLIN150</a>
-            <a href="../Engine/TC125/TC125.html">TC125</a>
-            <a href="../Engine/TC150/TC150.html">TC150</a>
+            <a href="/index.html">HOME</a>
+            <a href="/Engine/BANTUL100/BANTUL100.html">BANTUL100</a>
+            <a href="/Engine/BANTUL110/BANTUL110.html">BANTUL110</a>
+            <a href="/Engine/BANTUL125/BANTUL125.html">BANTUL125</a>
+            <a href="/Engine/BOLT110/BOLT110.html">BOLT110</a>
+            <a href="/Engine/BOLT125/BOLT125.html">BOLT125</a>
+            <a href="/Engine/FLAIR125/FLAIR125.html">FLAIR125</a>
+            <a href="/Engine/GOBLIN150/GOBLIN150.html">GOBLIN150</a>
+            <a href="/Engine/TC125/TC125.html">TC125</a>
+            <a href="/Engine/TC150/TC150.html">TC150</a>
 
          </div>
          
